--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,10 @@ body {
     height: 100%;
 }
 
-.left img {
+.left video {
     width: 100%;
     height: 100%;
+    object-fit: fill;
 }
 
 .right {
@@ -51,6 +52,10 @@ body {
     top: 10rem;
     background-color: rgb(0, 0, 0, 0.5);
     font-family: 'MitogenDisplay';
+    width: 100%;
+}
+
+.dark-overlay img {
     width: 100%;
 }
 
