--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ body {
 
 .left {
     position: relative;
-    width: 65%;
+    flex-basis: 65%;
+    max-width: 40%;
     height: 100%;
 }
 
@@ -24,6 +25,8 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
+    position: relative;
+    min-width: 60%;
 }
 
 @font-face {
@@ -38,13 +41,32 @@ body {
 
 .textHeader {
     background-color: #dc79ff;
-    height: 30%;
+    min-height: 35%;
+    min-width: 35%;
     font-family: 'FFMark', sans-serif;
     font-size: 25px;
 }
 
 .textHeader p {
     margin: 5%;
+    position: relative;
+    z-index: 1;
+    padding-top: 5%;
+}
+
+.imgContainer {
+    position: absolute;
+    right: 0%;
+    bottom: 10%;
+    z-index: 0;
+    opacity: 0;
+    transform: translateY(85%);
+}
+
+.animation {
+    opacity: 0.7;
+    transform: translateY(0);
+    transition-duration: 4s;
 }
 
 .dark-overlay {
@@ -62,11 +84,44 @@ body {
 .signUp {
     background-color: #ecb1e9;
     font-family: 'FFMark';
-    height: 40%;
+    height: 30%;
+    padding-left: 5%;
 }
 
 .signUp p {
-    margin: 5%;
+    font-family: 'MitogenDisplay';
+    font-size: 25px;
+    position: relative;
+    z-index: 1;
+}
+
+.formContainer {
+    display: flex;
+}
+
+#userLeftForm {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 50%;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding-right: 10%;
+}
+
+#userRightForm {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 50%;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    align-self: flex-start;
+}
+
+input[type="text"]:focus {
+    border: 1px solid;
+    border-color: #e36868;
 }
 
 
