--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
 .animation {
     opacity: 0.7;
     transform: translateY(0);
-    transition-duration: 4s;
+    transition-duration: 3s;
 }
 
 .dark-overlay {
@@ -97,6 +97,9 @@ body {
 
 .formContainer {
     display: flex;
+    opacity: 0;
+    transition: opacity 3s, transform 3s;
+    transform: translateY(85%);
 }
 
 #userLeftForm {
@@ -117,6 +120,12 @@ body {
     justify-content: space-evenly;
     align-items: flex-start;
     align-self: flex-start;
+}
+
+.formContainer.animation {
+    opacity: 1;
+    transform: translateY(0);
+    transition-duration: 3s;
 }
 
 input[type="text"]:focus {
