--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,9 @@ body {
     position: relative;
     z-index: 1;
     padding-top: 5%;
+    transform: translateY(-35px);
+    transition: transform 3s, opacity 3s;
+    opacity: 0;
 }
 
 .imgContainer {
@@ -63,9 +66,16 @@ body {
     transform: translateY(85%);
 }
 
-.animation {
+.imgContainer.animation {
     opacity: 0.7;
     transform: translateY(0);
+    transition-duration: 3s;
+    z-index: 1;
+}
+
+.textHeader.dropAnimation p{
+    opacity: 1;
+    transform: translateY(35px);
     transition-duration: 3s;
 }
 
@@ -98,7 +108,6 @@ body {
 .formContainer {
     display: flex;
     opacity: 0;
-    transition: opacity 3s, transform 3s;
     transform: translateY(85%);
 }
 
@@ -110,6 +119,16 @@ body {
     justify-content: space-evenly;
     align-items: flex-start;
     padding-right: 10%;
+    padding-bottom: -20%;
+    gap: -15px;
+}
+
+#userLeftForm label {
+    margin-bottom: -15px;
+}
+
+#userLeftForm input {
+    margin-bottom: 15px;
 }
 
 #userRightForm {
@@ -122,10 +141,19 @@ body {
     align-self: flex-start;
 }
 
+#userRightForm label {
+    margin-bottom: -15px;
+}
+
+#userRightForm input {
+    margin-bottom: 15px;
+}
+
 .formContainer.animation {
     opacity: 1;
     transform: translateY(0);
     transition-duration: 3s;
+    z-index: 1;
 }
 
 input[type="text"]:focus {
