--- a/styles.css
+++ b/styles.css
@@ -113,10 +113,10 @@ body {
     transform: translateY(85%);
 }
 
-#userLeftForm {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+#userForm {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 15px;
     max-width: 50%;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -125,30 +125,14 @@ body {
     gap: -15px;
 }
 
-#userLeftForm label {
+#userForm label {
+    display: block;
     margin-bottom: -15px;
 }
 
-#userLeftForm input {
+#userForm input {
     margin-bottom: 15px;
-}
-
-#userRightForm {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-width: 50%;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    align-self: flex-start;
-}
-
-#userRightForm label {
-    margin-bottom: -15px;
-}
-
-#userRightForm input {
-    margin-bottom: 15px;
+    width: 80%;
 }
 
 .formContainer.animation {
@@ -205,6 +189,10 @@ input[type="text"]:focus {
 
 a {
     margin-left: 2%;
+}
+
+fieldset {
+    width: 25%;
 }
 
 
